Send scroll animation takeOver message in the same frame that it's created

We send a takeOver message from the MT to CC when a main thread scrolling
reason is added. Before this CL, that msg actually made its way to CC when
::updateCompositorAnimations was called, needlessly skipping a frame.

BUG=615970

Review-Url: https://codereview.chromium.org/2085873004
Cr-Commit-Position: refs/heads/master@{#401705}

Former-commit-id: 73c83ce1b28eea72dc6b4c109adf1e6915533656